# f1-led-circuit

./: .gitignore  REQUIREMENTS.md
.cargo/: config.toml
.github/.workflows/: ci.yml
.github/workflows/: ci.yml
f1-led-circuit-kicad/: #auto_saved_files#  README.md  f1-led-circuit.kicad_pcb  f1-led-circuit.kicad_pro  f1-led-circuit.kicad_sch  fp-lib-table  rgb_led_track_chain.kicad_sch  sym-lib-table  ~f1-led-circuit.kicad_sch.lck
f1-led-circuit-kicad/3D models/: AS13AP.stp  FTSH-105-01-L-DV-K-P-TR.stp  FTSH-105-01-L-DV-K-TR.step  HD108-2020.step  TSM085P03CV.step
f1-led-circuit-kicad/footprints/F1-LED-CIRCUIT-LIBRARY.pretty/: DFN8_LDLN050_STM.kicad_mod  GCT_USB4105-GF-A.kicad_mod  GCT_USB4125-GF-A_REVA2.kicad_mod  HD108-2020.kicad_mod  LDLN050.kicad_mod  SAMTEC_FTSH-105-XX-X-DV.kicad_mod  SON_2XV6T1G_ONS.kicad_mod  TRACK.kicad_mod  WS-TASV-SPST-6x6mm.kicad_mod  ZANDVOORT_TRACK.kicad_mod
f1-led-circuit-kicad/gerber/: f1-led-circuit-B_Silkscreen.gbr  f1-led-circuit-F_Mask.gbr  f1-led-circuit-F_Paste.gbr  f1-led-circuit-F_Silkscreen.gbr
f1-led-circuit-kicad/gerber_old/: f1-led-circuit-B_Cu.gbr  f1-led-circuit-B_Mask.gbr  f1-led-circuit-B_Paste.gbr  f1-led-circuit-Edge_Cuts.gbr  f1-led-circuit-F_Cu.gbr  f1-led-circuit-NPTH.drl  f1-led-circuit-PTH.drl  f1-led-circuit-job.gbrjob
f1-led-circuit-kicad/manufacturing_order/gerber/: f1-led-circuit-B_Mask.gbr  f1-led-circuit-B_Paste.gbr  f1-led-circuit-Edge_Cuts.gbr
f1-led-circuit-kicad/schematics_block_diagram/: schematics_block_diagram_v3.drawio
f1-led-circuit-kicad/silkscreen_logo/: jitter.psd
f1-led-circuit-kicad/symbols/: F1-LED-CIRCUIT-LIBRARY.kicad_sym  adams_library_symbols.kicad_sym
f1-led-circuit-kicad/x_y_led_coords_zandvoort/: get_x_y_from_kicad.py  place_leds.py  select_leds_u1_to_u90.py  select_leds_u1_to_u96.py
f1-led-circuit-rust/: .gitignore  Cargo.toml  README.md  cfg.toml
f1-led-circuit-rust/f1-hardware/: Cargo.toml  build.rs
f1-led-circuit-rust/f1-hardware/src/: lib.rs  main.rs
f1-led-circuit-rust/f1-logic/: Cargo.toml
f1-led-circuit-rust/src/: lib.rs
f1-led-circuit-rust/xtask/: Cargo.toml
f1-led-circuit-rust/xtask/src/: main.rs
firmware/: .gitignore  rust-toolchain.toml
firmware/examples/f1-wifi/: Cargo.toml
firmware/examples/f1-wifi/.cargo/: config.toml
firmware/examples/f1-wifi/src/: main.rs
firmware/f1-hardware/: .envrc  Cargo.toml  cfg.toml  get_root_cert.sh  handmade_data.xlsx
firmware/f1-hardware/.cargo/: config.toml
firmware/f1-hardware/src/: _old_data.rs  api.openf1.org.pem  config.rs  data.rs  data_computer_10.rs  data_handmade_10.rs  data_works.rs  driver_info.rs  f1_data.rs  hd108.rs  localhost_cert.pem  main.rs  root_cert.pem  simple_rng.rs  spi_wrapper.rs  spiwrapper.rs
firmware/f1-logic/: Cargo.toml  README.md
firmware/f1-logic/src/: data_frame.rs  lib.rs
firmware/f1-simulation/: Cargo.toml
firmware/f1-simulation/src/: driver_info.rs  led_data.rs  main.rs
kicad/: README.md  f1-led-circuit.kicad_sch  fp-lib-table  rgb_led_track_chain.kicad_sch  rgb_led_track_chain_5.kicad_sch  sym-lib-table
kicad/3D models/: LDLN050PU33R.step
kicad/footprints/F1-LED-CIRCUIT-LIBRARY.pretty/: AS12AP_NKK.kicad_mod  GCT_USB4105-GF-A.kicad_mod  GCT_USB4720-03-A_REVA.kicad_mod  HD108-2020.kicad_mod  Net_Tie_0402_1005Metric.kicad_mod  SAMTEC_FTSH-105-XX-X-DV.kicad_mod  SON_2XV6T1G_ONS.kicad_mod
kicad/manufacturing_order/gerber/: f1-led-circuit-B_Cu.gbr  f1-led-circuit-B_Silkscreen.gbr  f1-led-circuit-F_Cu.gbr  f1-led-circuit-F_Mask.gbr  f1-led-circuit-F_Paste.gbr  f1-led-circuit-F_Silkscreen.gbr  f1-led-circuit-NPTH.drl  f1-led-circuit-PTH.drl  f1-led-circuit-job.gbrjob
kicad/symbols/: F1-LED-CIRCUIT-LIBRARY.kicad_sym
kicad/x_y_led_coords_zandvoort/: get_x_y_from_kicad.py  get_x_y_from_origin.py  place_leds.py  place_leds_20x20.py
kicad/zandvoort_10x10/: f1-led-circuit-10x10.kicad_pcb  f1-led-circuit-10x10.kicad_sch  rgb_led_track_chain.kicad_sch  sym-lib-table
kicad/zandvoort_20x20/: f1-led-circuit_20x20.kicad_pcb  f1-led-circuit_20x20.kicad_pro  f1-led-circuit_20x20.kicad_sch  rgb_led_track_chain.kicad_sch
kicad/zandvoort_20x20/missing_footprints/: PDFN33-1EP_3x3mm_P0.65mm.kicad_mod  SON_2XV6T1G_ONS.kicad_mod
schematics_block_diagram/: schematics_block_diagram.drawio  schematics_block_diagram_v2.drawio
