[package]
name = "f1-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
embedded-hal-async = "1.0.0"
embassy-executor = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
embassy-embedded-hal = "0.1.0"
embassy-time = { version = "0.3.1", features = ["generic-queue"] }
embassy-sync = "0.6.0"
static_cell = "2.1.0"
heapless = "0.8.0"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
riscv-rt = "0.12.2"
riscv = "0.11.1"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

