[package]
name = "f1-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
#esp32c3-hal = { version = "0.15.1", features = ["embassy_executor"] }
embedded-hal-async = "1.0.0"
embedded-nal-async = "0.7.1"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "task-arena-size-40960"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
embassy-embedded-hal = "0.1.0"
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
static_cell = { version = "2.1.0", features  = ["nightly"] }
esp-println = { version = "0.9.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.12.1", features = ["esp32c3", "println"] }
embassy-net = { version = "0.4.0", features = [ "dns", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
esp-wifi = { version = "0.6.0", features = [
     "esp32c3",
     "utils",
     "wifi",
     "wifi-default",
     "async",
     "embassy-net",
     "phy-enable-usb",
] }
embedded-io-async   = "0.6.1"
embedded-io = "0.6.1"
embedded-nal = "0.8.0"
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
#esp-mbedtls = { git = "https://github.com/esp-rs/esp-mbedtls", features = ["esp32c3", "async"]}
panic-halt = "0.2.0"
riscv-rt = "0.12.2"
riscv = "0.11.1"
heapless07 = { package = "heapless", version = "0.7.1" }
heapless08 = { package = "heapless", version = "0.8.0", features = ["serde"] }
postcard = "1.0.8"
serde = { version = "1.0.204", default-features = false }
serde-json-core = "0.5.1"
grounded = { version = "0.2.0", features = ["cas"] }
chrono = { version = "0.4.38", default-features = false }
embedded-tls = { version = "0.17.0", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
rand_core = { version = "0.6.3", default-features = false }
#esp-alloc = "0.4.0"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

#[profile.release]
#codegen-units = 1 # LLVM can perform better optimizations using a single thread
#debug = 2
#debug-assertions = false
#incremental = false
#lto = 'fat'
#opt-level = 's'
#overflow-checks = false

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

