[package]
name = "f1-hardware"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.18.0", features = ["esp32c3", "async"] }
#esp32c3-hal = { version = "0.15.1", features = ["embassy_executor"] }
embedded-hal-async = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["executor-thread"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
esp-hal-embassy = { version = "0.1.0", features = ["esp32c3", "time-timg0"] }
embassy-embedded-hal = "0.1.0"
embassy-time = { version = "0.3.1", features = ["generic-queue"] }
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"
static_cell = { version = "2.1.0", features  = ["nightly"] }
esp-println = { version = "0.9.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.12.1", features = ["esp32c3", "println"] }
panic-halt = "0.2.0"
riscv-rt = "0.12.2"
riscv = "0.11.1"
heapless07 = { package = "heapless", version = "0.7.0" }
heapless08 = { package = "heapless", version = "0.8.0" }
serde = { version = "1", default-features = false, features = ["derive"]}

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

