[package]
name = "f1-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.16.0", features = [ "esp32c3", "embassy", "async", "embassy-executor-thread", "embassy-time-timg0" ] }
esp-alloc = { version = "0.3.0" }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32c3", "log"] }
embedded-hal       = { version = "1.0.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.4.0", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "embassy-net",
    "wifi-logs",
    "wifi",
    "wifi-default",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.10.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "dns-max-server-count-4"
] }
embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0" }
embedded-io-async = { version = "0.6.1" }
embassy-futures = "0.1.1"
embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "proto-ipv6", "log", "dns"] }
static_cell = { version = "2.0", features = ["nightly"] }
log = { version = "0.4.20" }


[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
