[package]
name = "f1-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
riscv-rt = "0.12.2"
riscv = "0.11.1"

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

