[package]
name = "f1-logic"
version = "0.1.0"
edition = "2021"

[features]
use-std = ["csv"]

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["derive"] } # "1.3"
csv = {version = "1.3.0", optional = true}
heapless = "0.8.0"


[[bin]]
name = "csv_to_bin"
test = false
bench = false
required-features = ["use-std"]

[[bin]]
name = "deserialize_in_chunks"
test = false
bench = false
required-features = ["use-std"]

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

