[package]
name = "f1-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
iced = { version = "0.12.1", features = ["tokio", "canvas"] }
iced_futures = "0.12.0"
smol = "1.0"
smol_str = "0.2"
tokio = { version = "1.38", features = ["full"] }
futures = "0.3.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.10"
rand = "0.8.5"
log = "0.4"
csv = "1.1"
