[package]
name    = "f1-wifi"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-time = { version = "0.3.0", features = ["generic-queue-8"] }
embedded-io-async   = "0.6.1"
embedded-io = "0.6.1"
esp-backtrace = { version = "0.12.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32c3", "async" ] }
esp-hal-embassy = { version = "0.1.0", features = [ "esp32c3", "time-timg0" ] }
esp-println = { version = "0.9.1", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
esp-wifi = { version = "0.6.0", features = [
     "esp32c3",
     "utils",
     "wifi",
     "wifi-default",
     "async",
     "embassy-net",
     "phy-enable-usb",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
